style.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    font-family: Inter, sans-serif;
    background-color: lightgray;
}

.components {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 3em;
    margin-left: 3em;
    gap: 5em;
}

.page {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1em;
}

.page-header {
    font-family: Permanent Marker;
    font-size: 60px;
    margin-bottom: 0.25em;
}

.page-subheading {
    margin-top: 0;
    font-size: 20px;
}

.page-label-row, .page-label-col {
    font-family: Permanent Marker;
    font-size: 40px;
    color: #5E5D5D;
    text-align: center;
    margin: 0 1em 0 0;
}

.page-label-row {
    text-align: end;
}

/* Button styling */

button {
    background-color: #E5E7EB;
    color: #4B5563;
    border: 1px solid #6B7280;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
    cursor: pointer;
    font-weight: 700;
    padding: 9px 17px;
    border-radius: 6px;
    line-height: 24px;
    display: flex;
    align-items: center;
}

button:focus {
    outline: none;
}

button.button-sm {
    padding: 7px 11px;
    font-size: 12px;
}

button.button-lg {
    padding: 13px 25px;
}

button.button-success {
    color: #047857;
    background-color: #ECFDF5;
    border-color: #047857;
}
 
button.button-warning {
    color: #FBBF24;
    background-color: #FFFBEB;
    border-color: #FBBF24;
}
 
button.button-danger {
    color: #F87171;
    background-color: #FEF2F2;
    border-color: #F87171;
}

/* Menu Styling */

.menu {
    position: fixed;
    left: 2em;
    top: 1em;
    display: inline-block;
    align-self: flex-start;
}

.menu-button {
    background-color: white;
}

.menu-dropdown {
    position: absolute;
    left: 0;
    margin-top: 3px;
    background-color: white;
    border: 1px solid gray;
    border-radius: 6px;
    background-color: white;
}

.menu-item {
    color: #4B5563;
    padding: .75rem 2rem;
    cursor: pointer;
    min-width: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    user-select: none;
}

.menu-item:hover {
    background-color: whitesmoke;
}

.menu-item:not(:last-child) {
    border-bottom: 1px solid #6B7280;
}

.box {
    height: 100px;
    width: 100px;
    border: 1px solid black;
    cursor: pointer;
    background-color: white;
    transition: background-color .3s ease-in-out;
}

.box.filled {
    background-color: blue;
}

/* Badge styling */

.badge-grid {
    display: grid;
    grid-template: 1fr 1fr / 0.25fr 1fr;
}

.badge-row {
    display: inline-flex;
    gap: 10px;
}

.badge {
    font-size: 14px;
    font-weight: 500;
    padding: 2px 12px;
    align-self: center;
}

.badge-square {
    border-radius: 4px;
}

.badge-pill {
    border-radius: 12px;
}

.badge-gray {
    color: #1F2937;
    background: #F3F4F6;
}

.badge-red {
    color: #991B1B;
    background: #FEE2E2;
}

.badge-yellow {
    color: #92400E;
    background: #FEF3C7;
}

.badge-green {
    color: #065F46;
    background: #D1FAE5;
}

.badge-blue {
    color: #1E40AF;
    background: #DBEAFE;
}

.badge-indigo {
    color: #3730A3;
    background: #E0E7FF;
}

.badge-purple {
    color: #5B21B6;
    background: #EDE9FE;
}

.badge-pink {
    color: #9D174D;
    background: #FCE7F3;
}

/* Banner styling */
.banner-grid {
    display: grid;
    grid-template-columns: auto auto;
    align-items: center;
    margin-right: 1em;
    gap: 1em;
}

.banner {
    display: flex;
    flex-basis: 200px;
    flex-grow: 0;
    align-items: flex-start;
    gap: 12px;
    padding: 16px;
    border-radius: 6px;
    font-size: 14px;
}

.banner-title {
    margin-top: 2px;
    font-weight: 600;
}

.banner-text {
    margin-bottom: 0;
}

.banner-success {
    color: #047857;
    background: #ECFDF5;
}

.banner-success .banner-title {
    color: #065F46;
}

.banner-warning {
    color: #B45309;
    background: #FFFBEB;
}

.banner-warning .banner-title {
    color: #92400E;
}

.banner-error {
    color: #B45309;
    background: #FEF2F2;
}

.banner-error .banner-title {
    color: #92400E;
}

.banner-neutral {
    color: #1C51B9;
    background: #EFF6FF;
}

.banner-neutral .banner-title {
    color: #1E40AF;
}

/* Card styling */
.card-grid {
    display: grid;
    grid-template: 250px 250px / 400px 400px;
    gap: 3em;
    margin-right: 2em;
    margin-top: 2em;
}

.card {
    position: relative;
    border-radius: 8px;
    background: #F9FAFB;
    padding: 56px 24px 32px 24px;
    text-align: center;
}

.card-icon {
    width: 48px;
    height: 48px;
    position: absolute;
    top: -10%;
    left: 45%;
    right: auto;
    padding: 12px;
    border-radius: 6px;
}

